Correcting links at HTML and some class at CSS. One CSS file removed

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -189,7 +189,7 @@ h2 {
 
 footer {
     text-align: center;
-    background: url("bg.jpg");
+    background: url("../Images/bg.jpg");
     color: white;
     padding: 20px 0 15px 0;
 }
